--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -63,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
+<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
 
     
 
@@ -1199,19 +1198,18 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/datatables/jquery.data-tables.min.js"></script>
   <script src="assets/datatables/data-tables.bootstrap4.min.js"></script>
   <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
   </body>
 </html>
