--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
